# RoboSense

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DECISIONS.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  seed.py
backend/app/api/: alerts.py  auth.py  deps.py  devices.py  health.py  stream.py  telemetry.py
backend/app/core/: config.py  events.py  rate_limit.py  security.py
backend/app/db/: base.py  init_db.py  session.py  timescale.py
backend/app/models/: __init__.py  alert.py  device.py  telemetry.py  user.py
backend/app/schemas/: alert.py  auth.py  device.py  telemetry.py
backend/tests/: conftest.py  test_alerts.py  test_anomalies.py  test_auth.py  test_devices.py  test_health.py  test_seed.py  test_stream.py  test_summary.py  test_telemetry.py
examples/ros2/: README.md
examples/ros2/telemetry_bridge/: package.xml  setup.py
examples/ros2/telemetry_bridge/telemetry_bridge/: bridge_node.py
firmware/esp32/: README.md  platformio.ini  robosense_esp32.ino
frontend/: .dockerignore  .env.example  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/devices/[id]/: page.tsx
frontend/components/: AlertsPanel.tsx  ApiKeyDialog.tsx  AuthForm.tsx  DeviceCard.tsx  SensorChart.tsx
frontend/lib/: api.ts  auth.tsx  format.ts  types.ts  useDeviceStream.ts
